==> chengkun6/lock/rc522.c <==
#include <rtthread.h>
#include <rtdevice.h>
#include <drv_spi.h>
#include <board.h>
#include "RC522.h"
#include <drv_common.h>
#include <rtdbg.h>
#define DBG_TAG "RC522"
#define DBG_LVL DBG_LOG
#define BME280_SPI_DEVICE_NAME "spi10"
#define BEM280_REG_ID 0XD0
#define get
#define RC522_THREAD_PRIORITY     15
#define MAXRLEN 18

char PcdReset(void)
{
    RST_H;
    rt_thread_mdelay(10);
    RST_L;
    rt_thread_mdelay(10);
    RST_H;
    rt_thread_mdelay(100);

    if(ReadRawRC(0x02) == 0x80)
    {
    }

    WriteRawRC(CommandReg,PCD_RESETPHASE);

    WriteRawRC(ModeReg,0x3D);
    WriteRawRC(TReloadRegL,30);
    WriteRawRC(TReloadRegH,0);
    WriteRawRC(TModeReg,0x8D);
    WriteRawRC(TPrescalerReg,0x3E);
    WriteRawRC(TxAutoReg,0x40);
    return MI_OK;
}

char M500PcdConfigISOType(unsigned char type)
{
   if (type == 'A')
   {
      ClearBitMask(Status2Reg,0x08);
      WriteRawRC(ModeReg,0x3D);//3F
      WriteRawRC(RxSelReg,0x86);//84
      WriteRawRC(RFCfgReg,0x7F);   //4F
      WriteRawRC(TReloadRegL,30);//tmoLength);// TReloadVal = 'h6a =tmoLength(dec)
      WriteRawRC(TReloadRegH,0);
      WriteRawRC(TModeReg,0x8D);
      WriteRawRC(TPrescalerReg,0x3E);
      rt_thread_mdelay(10);
      PcdAntennaOn();
   }
   else{ return (char)-1; }
   return MI_OK;
}

unsigned char ReadRawRC(unsigned char Address)
{
     unsigned char i, ucAddr;
     unsigned char ucResult=0;
     NSS_L;
     ucAddr = ((Address<<1)&0x7E)|0x80;
     for(i=8;i>0;i--)
     {
         SCK_L;
         if(ucAddr&0x80)
            MOSI_H;
         else
            MOSI_L;
         SCK_H;
         ucAddr <<= 1;
     }
     for(i=8;i>0;i--)
     {
         SCK_L;
         ucResult <<= 1;
         SCK_H;
         if(READ_MISO == 1)
            ucResult |= 1;
     }
     NSS_H;
     SCK_H;
     return ucResult;
}

void WriteRawRC(unsigned char Address, unsigned char value)
{
    unsigned char i, ucAddr;
    SCK_L;
    NSS_L;
    ucAddr = ((Address<<1)&0x7E);
    for(i=8;i>0;i--)
    {
        if(ucAddr&0x80)
            MOSI_H;
        else
            MOSI_L;
        SCK_H;
        ucAddr <<= 1;
        SCK_L;
    }
    for(i=8;i>0;i--)
    {
        if(value&0x80)
            MOSI_H;
        else
            MOSI_L;
        SCK_H;
        value <<= 1;
        SCK_L;
    }
    NSS_H;
    SCK_H;
}
