==> 1venom/abcd/GPRS/HARDWARE/RC522/rc522.c <==
#include "stm32f10x_gpio.h"
#include "rc522.h"
#include "io.h"

char M500PcdConfigISOType(unsigned char type)
{
   if (type == 'A')                     //ISO14443_A
   {
       ClearBitMask(Status2Reg,0x08);


       WriteRawRC(ModeReg,0x3D);//3F

       WriteRawRC(RxSelReg,0x86);//84

       WriteRawRC(RFCfgReg,0x7F);   //4F

   	   WriteRawRC(TReloadRegL,30);//tmoLength);// TReloadVal = 'h6a =tmoLength(dec)
	   WriteRawRC(TReloadRegH,0);
       WriteRawRC(TModeReg,0x8D);
	   WriteRawRC(TPrescalerReg,0x3E);
  //     PcdSetTmo(106);
	   os_delay_us(1);
       PcdAntennaOn();
   }
   else{ return MI_NOTAGERR; }

   return MI_OK;
}

void WriteRawRC(unsigned char Address, unsigned char value)
{
    unsigned char  i, ucAddr;

    os_delay_us(1);
    MF522_SCK_0;
    os_delay_us(1);
    MF522_NSS_0;
    os_delay_us(1);
    ucAddr = ((Address<<1)&0x7E);

    for(i=8;i>0;i--)
    {
    	if((ucAddr&0x80)==0x80)
    		MF522_SI_1;
    	else
    		MF522_SI_0;

    	os_delay_us(1);

        MF522_SCK_1;
        os_delay_us(1);
        ucAddr <<= 1;
        MF522_SCK_0;
        os_delay_us(1);
    }

    for(i=8;i>0;i--)
    {
    	  os_delay_us(1);
    	if((value&0x80)==0x80)
    		MF522_SI_1;
    	else
    		MF522_SI_0;
    	  os_delay_us(1);
        MF522_SCK_1;
        os_delay_us(1);
        value <<= 1;
        MF522_SCK_0;
        os_delay_us(1);
    }
    os_delay_us(1);
    MF522_NSS_1;
    os_delay_us(1);
    MF522_SCK_1;
}

unsigned char ReadRawRC(unsigned char Address)
{
     unsigned char i,ucAddr;
     unsigned char ucResult=0;

     os_delay_us(1);
     MF522_SCK_0;
     os_delay_us(1);
     MF522_NSS_0;
     os_delay_us(1);
     ucAddr = ((Address<<1)&0x7E)|0x80;

     for(i=8;i>0;i--)
     {
    	  os_delay_us(1);
     	if((ucAddr&0x80)==0x80)
     		MF522_SI_1;
     	else
     		MF522_SI_0;
     	  os_delay_us(1);
         MF522_SCK_1;
         os_delay_us(1);
         ucAddr <<= 1;
         os_delay_us(1);
         MF522_SCK_0;
         os_delay_us(1);
     }

     for(i=8;i>0;i--)
     {
         MF522_SCK_1;
         os_delay_us(1);
         ucResult <<= 1;
         ucResult|=MF522_SO;
         os_delay_us(1);
         MF522_SCK_0;
         os_delay_us(1);
     }

     MF522_NSS_1;
     os_delay_us(1);
     MF522_SCK_1;
     os_delay_us(1);
     return ucResult;
}

char PcdReset(void)
{  

    MF522_RST_1;
    os_delay_us(100);
    MF522_RST_0;
    os_delay_us(100);
    MF522_RST_1;
    os_delay_us(100);
    WriteRawRC(CommandReg,PCD_RESETPHASE);
    os_delay_us(100);

    WriteRawRC(ModeReg,0x3D);            //潞脥Mifare驴篓脥篓脩露拢卢CRC鲁玫脢录脰碌0x6363

    WriteRawRC(TReloadRegL,30);
    WriteRawRC(TReloadRegH,0);
    WriteRawRC(TModeReg,0x8D);
    WriteRawRC(TPrescalerReg,0x3E);
    WriteRawRC(TxAutoReg,0x40);
    return MI_OK;
}
